<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="450dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:layout_margin="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_summary_title"
                        android:textSize="20sp"
                        android:labelFor="@+id/summary_text_entry"/>

                    <EditText
                        android:id="@+id/summary_text_entry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/pursuits_and_passions_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:layout_margin="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_pursuits_and_passions_title"
                        android:textSize="20sp"
                        android:labelFor="@+id/pursuit_text_entry"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/profile_pursuits_and_passions_info"
                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/pursuit_text_entry"
                            android:layout_height="wrap_content"
                            android:layout_width="200dp"
                            android:layout_marginEnd="8dp"
                            android:layout_alignParentStart="true"
                            android:inputType="text"/>

                        <Button
                            android:id="@+id/add_pursuit_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/pursuit_text_entry"
                            android:layout_alignParentEnd="true"
                            android:text="@string/profile_pursuits_and_passions_button_text"
                            android:theme="@style/BeehiveButton"/>

                    </RelativeLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/pursuits_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/story_question_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_story_question_title"
                        android:textSize="20sp"
                        android:layout_marginBottom="8dp"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/story_question_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_back_button_title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:theme="@style/BeehiveButton"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_next_button_title"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:theme="@style/BeehiveButton"/>

    </RelativeLayout>



</LinearLayout>
