...
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"/>

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>

    </LinearLayout>
...
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:theme="@style/BeehiveButton" />

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_button_text"
            android:theme="@style/BeehiveButton"/>

    </LinearLayout>
...
